--- a/src/Makefile
+++ b/src/Makefile
@@ -28,7 +28,7 @@ dvi: clean
 
 clean:
 	rm -rf *.a */*.a *.o */*.o */*.out */test report gcov *.gcno *.gcda html
-#	bash ../../clear.sh
+	bash ../../clear.sh
 
 # $(FILES).a:
 # 	cd $(PATH_TO_FILE); $(CC) $(CFLAGS) $(FILES).; ar rcs $(FILES).a $(FILES).o; rm *.o 
