--- a/src/Makefile
+++ b/src/Makefile
@@ -2,8 +2,7 @@ CC=g++
 FILES = s21_map
 TEST_FLAGS=-lgtest -pthread
 GTEST_FLAG = --gtest_repeat=1 --gtest_shuffle
-TEST_FUNC= array_tests.cc map_tests.cc set_tests.cc multiset_tests.cc
-#vector_tests.cc list_tests.cc queue_tests.cc stack_tests.cc
+TEST_FUNC= array_tests.cc map_tests.cc set_tests.cc multiset_tests.cc vector_tests.cc list_tests.cc queue_tests.cc stack_tests.cc
 PATH_TO_FILE = s21_map
 cleanMAC = echo check
 
