--- a/src/Makefile
+++ b/src/Makefile
@@ -57,4 +57,14 @@ push: clean goclang
 	git commit -m "$(c)"
 	git push
 
+gcov_report: clean
+#	mkdir -p gcov
+#	$(CC) --coverage tests/*.cc -o gcov/greport $(TEST_FLAGS)
+#	./gcov/greport
+#	lcov -t "greport" -o greport.info -c -d .
+	g++ --coverage tests/map_tests.cc -o fizzbuzz -lgtest_main $(TEST_FLAGS)
+	./fizzbuzz $(GTEST_FLAG)
+	lcov -t "fizzbuzz" -o fizzbuzz.info -c -d . --no-external
+	
+
 .PHONY: installDox dvi clean $(FILES).a clang goclang test valgrind check_cppcheck push
