--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 CC=g++
 FILES = s21_map
-TEST_FLAGS=-lgtest -pthread
+TEST_FLAGS=-lgtest -pthread -lgtest_main -lstdc++ -lm
 GTEST_FLAG = --gtest_repeat=1 --gtest_shuffle
 TEST_FUNC=  map_tests.cc vector_tests.cc list_tests.cc queue_tests.cc stack_tests.cc array_tests.cc  set_tests.cc multiset_tests.cc   
 PATH_TO_FILE = s21_map
@@ -29,11 +29,11 @@ dvi: clean
 	open html/index.html
 
 clean:
-	rm -rf *.a */*.a *.o */*.o */*.out */test report gcov *.gcno *.gcda html
-	$(cleanMAC)
+	rm -rf *.a */*.a *.o */*.o */*.out */test report gcov *.gcno *.gcda tests/*.gcno tests/*.gcda html gcov_report tests/*.info
+	# $(cleanMAC)
 
 test: 
-	# make clean
+	make clean
 	cd tests; $(CC) $(TEST_FUNC) -o test $(TEST_FLAGS); ./test $(GTEST_FLAG)
 
 clang:
@@ -57,4 +57,24 @@ push: clean goclang
 	git commit -m "$(c)"
 	git push
 
-.PHONY: installDox dvi clean $(FILES).a clang goclang test valgrind check_cppcheck push
+gcov_report: 
+# clean
+#	g++ -std=c++17 -g -Wall -Werror -Wextra  --coverage $(SOURCE) ./tests/*.cc -o $(TEST_FILE_COV) $(TESTFLAGS)
+#	./$(TEST_FILE_COV)
+#	lcov -t "$(TEST_FILE_COV)" -o $(TEST_FILE_COV).info -c -d . --no-external  
+#	genhtml -o report $(TEST_FILE_COV).info
+	cd tests; $(CC) -std=c++17 -g --coverage $(TEST_FUNC) -o ../gcov_report  $(TEST_FLAGS)
+	cd ..
+	./gcov_report 
+	lcov -t "stest" -o s21_test.info -c -d ./ --no-external --ignore-errors mismatch
+	genhtml -o report s21_test.info
+	open ./report/index.html
+
+# g++ -std=c++17 -g --coverage ./tests/map_tests.cc -o greport $(TEST_FLAGS)
+# ./greport
+# lcov -t "greport" -o greport.info -c -d . --no-external --ignore-errors mismatch
+# genhtml -o report fizzbuzz.info
+# ./report.html
+	
+
+.PHONY: installDox dvi clean $(FILES).a clang goclang test valgrind check_cppcheck push gcov_report
