--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-CC=g++ 
+CC=g++ -Wall -Werror -Wextra
 FILES = s21_map
 TEST_FLAGS=-lgtest -pthread -lgtest_main -lstdc++ -lm
 GTEST_FLAG = --gtest_repeat=1 --gtest_shuffle
@@ -27,7 +27,7 @@ clean:
 	rm -rf *.a */*.a *.o *.info */*.o */*.out */test report gcov *.gcno *.gcda $(PATH_TO_TEST)/*.gcno $(PATH_TO_TEST)/*.gcda html gcov_report $(PATH_TO_TEST)/*.info gcov_report.dSYM .DS_Store
 
 test: clean
-	cd $(PATH_TO_TEST); $(CC) -std=c++17 $(TEST_FUNC) -o test $(TEST_FLAGS); ./test $(GTEST_FLAG)
+	cd $(PATH_TO_TEST); $(CC) $(TEST_FUNC) -o test $(TEST_FLAGS); ./test $(GTEST_FLAG)
 
 clang:
 	clang-format -style="{BasedOnStyle: Google}" -n */*.h */*.inc */*.cc
